deploy/counter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: counter-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: counter
        version: v1
    spec:
      containers:
      - name: counter
        image: counter:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: counter
