deploy/flask.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: flask:v1
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  ports:
  - port: 80
    targetPort: 4000
    name: http
  selector:
    app: flask
