deploy/flask-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask
spec:
  hosts:
  - flask
  gateways:
  - flaskinfo
  - mesh #TODO remove this if not needed
  http:
  - route:
    - destination:
        host: flask
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter
spec:
  hosts:
  - counter
  http:
  - route:
    - destination:
        host: counter
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: date
spec:
  hosts:
  - date
  http:
  - route:
    - destination:
        host: date
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: date
spec:
  host: date
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask
spec:
  host: flask
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: counter
spec:
  host: counter
  subsets:
  - name: v1
    labels:
      version: v1
