deploy/flask-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskinfo
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        exact: /info
    route:
    - destination:
        host: flask
        port: 
            number: 80
