deploy/flask-v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: date
spec:
  hosts:
  - date
  http:
  - route:
    - destination:
        host: date
        subset: v2
