deploy/simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: date-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: date
spec:
  hosts:
  - "*"
  gateways:
  - date-gateway
  http:
  - match:
    - headers:
        me:
          exact: me
    route:
    - destination:
        host: date
        subset: v2
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: date
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: date
spec:
  host: date
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
